--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       <li class="list-group-item">Item 2</li>
       <li class="list-group-item">Item 3</li>
       <li class="list-group-item">Item 4</li>
+      <li>Item 5</li>
     </ul>
    </div>
   </div>
-  <script src="dom.js"></script>
+  <script src="dom2.js"></script>
 </body>
 </html>
