--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         <div class=" mb-3 text-center">   
             <button class="btn btn-success" id="btn">Schedule</button> 
         </div>
+        <div class="onscreen"style="background-color: darkgrey;">
+            <label for="scheduled">Scheduled calls are shown below:</label>
+            <ul class="addhere"></ul>
+        </div>
     </form> 
     <script src='index.js'>
     </script>    
