Delete data from Local Storage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>   
     <form id='myform'class="customisecolor">
         <h1 style="color:orange;background-color: rgb(86, 94, 88);">Book a call</h1>
-        <p1>Book a call slot and our representatives will call you within 1 hour.</p1>
+        <p1>Book a call slot and our representatives will call you back.</p1>
         <hr>
         <div class="input-group mb-3 " >
             <label for="Name" class="input-group-text" >Name:</label>
